# deletepy

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  EXPORT_LAST_LOGIN.md  FUNCTION_REFACTOR_TODO.md  Makefile  README.md  REFACTORING_PLAN.md  SDK_MIGRATION_COMPLETE.md  __init__.py  auth.py  cleanup_csv.py  config.py  delete.py  demo_connection_filter.py  email_domain_checker.py  export_last_login_example.py  ids.csv  main.py  production_confirmation.py  pyproject.toml  rate_limit_config.py  requirements.txt  test_auth.py  test_config.py  test_delete.py  test_email_domain_checker.py  test_multiple_users.py  test_user_operations.py  test_utils.py  user_operations.py  utils.py
.github/: dependabot.yml
.github/workflows/: deploy.yml
.kiro/specs/bug-fixes/: design.md  requirements.md  tasks.md
docs/: LOGGING.md
src/deletepy/: __init__.py
src/deletepy/cli/: __init__.py  commands.py  csv_commands.py  main.py  validators.py
src/deletepy/config/: logging.yaml
src/deletepy/core/: __init__.py  auth.py  auth0_client.py  config.py  exceptions.py  interfaces.py  sdk_operations.py
src/deletepy/models/: __init__.py  checkpoint.py  config.py  user.py
src/deletepy/operations/: __init__.py  batch_ops.py  batch_processor.py  checkpoint_ops.py  domain_ops.py  export_ops.py  preview_ops.py  user_ops.py  validation_ops.py
src/deletepy/utils/: __init__.py  auth_utils.py  checkpoint_manager.py  checkpoint_utils.py  csv_utils.py  display_utils.py  file_utils.py  legacy_print.py  logging_utils.py  output.py  password_utils.py  rate_limiter.py  request_utils.py  rich_utils.py  url_utils.py  validators.py
tests/: __init__.py  conftest.py  test_auth.py  test_auth0_client.py  test_batch_processor.py  test_checkpoint_ops.py  test_checkpoint_utils.py  test_cleanup_csv.py  test_cli.py  test_email_domain_checker.py  test_enhanced_validation.py  test_models.py  test_password_utils.py  test_preview_ops.py  test_rate_limiter.py  test_request_utils.py  test_structured_logging.py  test_url_utils.py  test_user_operations.py  test_utils.py  test_validation_ops.py
