[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deletepy"
version = "1.0.0"
description = "Auth0 User Management Tool for bulk operations"
authors = [
    {name = "Niko Salonen", email = "nikotsalonen@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "click>=8.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "types-requests>=2.32.0",
]

[project.scripts]
deletepy = "deletepy.cli.main:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
strict = true
mypy_path = "src"
packages = ["deletepy"]

# Module-specific settings
[[tool.mypy.overrides]]
module = [
    "email_domain_checker",
    "production_confirmation",
    "rate_limit_config",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deletepy"]
