[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deletepy"
version = "1.0.0"
description = "Auth0 User Management Tool for bulk operations"
authors = [
    {name = "Niko Salonen", email = "nikotsalonen@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "click>=8.2.1",
]

[project.urls]
  Repository = "https://github.com/nikotsalonen/deletepy"
  Issues = "https://github.com/nikotsalonen/deletepy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff==0.12.7",
    "mypy==1.17.0",
    "pre-commit>=4.2.0",
    "types-requests>=2.32.0",
    "black>=23.12.1",
    "autoflake>=2.2.1",
    "pyupgrade>=3.15.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
deletepy = "deletepy.cli.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''



[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
expand-star-imports = true
remove-duplicate-keys = true

[tool.pyupgrade]
py311-plus = true

  [tool.coverage.run]
  source = ["src"]
  omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# Module-specific settings
[[tool.mypy.overrides]]
module = [
    "email_domain_checker",
    "production_confirmation",
    "rate_limit_config",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Removed blanket ignore_errors for deletepy.cli.main - type issues resolved with proper type stubs
# Added targeted override for CLI module to relax decorator rules while maintaining type safety
[[tool.mypy.overrides]]
module = "deletepy.cli.*"
disallow_untyped_decorators = false
# Relax type checking for Click decorators with Path types
[[tool.mypy.overrides]]
module = "deletepy.cli.main"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deletepy"]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "types-click>=7.1.8",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
]
