[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deletepy"
version = "1.0.0"
description = "Auth0 User Management Tool for bulk operations"
authors = [
    {name = "Niko Salonen", email = "nikotsalonen@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "click>=8.3.1",
    "rich>=14.1.0",
]

[project.urls]
  Repository = "https://github.com/nikotsalonen/deletepy"
  Issues = "https://github.com/nikotsalonen/deletepy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "types-requests>=2.32.4.20260107",
    "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
deletepy = "deletepy.cli.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff-format
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

  [tool.coverage.run]
  source = ["src"]
  omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
strict = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

# Module-specific settings
[[tool.mypy.overrides]]
module = [
    "email_domain_checker",
    "production_confirmation",
    "rate_limit_config",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Removed blanket ignore_errors for deletepy.cli.main - type issues resolved with proper type stubs
# Added targeted override for CLI module to relax decorator rules while maintaining type safety
[[tool.mypy.overrides]]
module = "deletepy.cli.*"
disallow_untyped_decorators = false
# Relax type checking for Click decorators with Path types
[[tool.mypy.overrides]]
module = "deletepy.cli.main"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deletepy"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
]
